implemented restaurant fe with the template